# hypercube

./: CMakeLists.txt  README.md  main.cpp  plot.gnuplot
